# brainglobe-ccf-translator

./: .gitignore  .pre-commit-config.yaml  PyPiDeploy.md  README.md  codemeta.json  pyproject.toml  setup.py  testing.py
.github/workflows/: publish.yml  test_and_deploy.yml
CCF_translator/: read_write.py
brainglobe_ccf_translator/: PointSet.py  Volume.py  VolumeSeries.py  __init__.py  config.py  read_write.py  space_utils.py
brainglobe_ccf_translator/deformation/: apply_deformation.py  forward_transform.py  route_calculation.py
brainglobe_ccf_translator/deformation/interpolation/: NearestNDInterpolator.py
brainglobe_ccf_translator/metadata/: translation_metadata.csv
tests/: README.md  manual_plot_all.py  manual_plot_pointset.py  test_PointSet.py  test_Volume.py  test_VolumeSeries.py  test_space_utils.py
tests/PointSet_test_cases/: demba_dev_mouse_32.json  demba_dev_mouse_56.json  perens_lsfm_mouse.json  perens_mri_mouse.json  perens_multimodal_lsfm.json
tests/VolumeSeries_test_cases/: demba_p4_interpolate_to_p56.json  demba_p4_interpolate_to_p8.json
tests/Volume_test_cases/: allen_to_demba_P5.json  allen_to_demba_P56.json  allen_to_perens_lsfm_mouse.json  princeton_mouse_to_perens_multimodal_lsfm.json  princeton_to_perens_lsfm.json  princeton_to_perens_multimodal_lsfm.json
tests/test_data/: generating_expected_outputs.py  generating_expected_pointset_outputs.py  generating_test_data.py
tests/test_data/expected_outputs/: allen_mouse_to_demba_dev_mouse_P5.npz  allen_mouse_to_demba_dev_mouse_P56.npz  demba_dev_mouse_P4_interpolated.npz  demba_dev_mouse_P5_interpolated.npz  demba_dev_mouse_P6_interpolated.npz  demba_dev_mouse_P7_interpolated.npz  demba_dev_mouse_P8_interpolated.npz  princeton_mouse_to_perens_multimodal_lsfm.npz
tests/test_data/volumes/: demba_P14_mouse_200um.npz  demba_P28_mouse_200um.npz  demba_P4_mouse_200um.npz  demba_P56_mouse_200um.npz  demba_P5_mouse_200um.npz  demba_P7_mouse_200um.npz  demba_P8_mouse_200um.npz  perens_stereotaxic_mri_mouse_200um.npz
tutorials/: age_translation.py  time_interpolation.py  transform_brainglobe_volume.py  transform_points.py  view_allen_connectivity.py
utilities/: README.md  creating_intermediate_deformations.py  visualise_graph.py
utilities/ingesting_new_deformations/: combine_gubra_corrections.py  demba_dev_mouse.py  dorr_mouse_mri.py  gubra_atlases.py  gubra_corrections.py  ingesting_gubra.py  ingesting_princeton.py  perens_mouse.py  princeton_lightsheet_mouse.py
utilities/metadata_generation/: compile_metadata.py  demba_metadata.py  dorr_mouse_mri_metadata.py  gubra_metadata.py  perens_metadata.py  princeton_metadata.py
